<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="mainActivity"
            type="com.hdh.shoplistfilter.ui.main.MainActivity" />
    </data>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff">


        <!-- Top Toolbar -->
        <android.support.constraint.Guideline
            android:id="@+id/gl_15"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.08" />

        <View
            android:id="@+id/vToolbar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#f1f5f7"
            app:layout_constraintBottom_toTopOf="@+id/gl_15"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvRanking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:drawableLeft="@drawable/ic_swap_vertical_circle_black_24dp"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:text="@string/top_rankingText"
            android:textColor="#a9aaaa"
            app:layout_constraintBottom_toBottomOf="@+id/vToolbar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btFilter"
            android:layout_width="70dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_button"
            android:drawableRight="@drawable/ic_filter_black_24dp"
            android:padding="5dp"
            android:text="@string/top_filterText"
            android:textColor="#a9aaaa"
            app:layout_constraintBottom_toBottomOf="@+id/vToolbar"
            app:layout_constraintRight_toLeftOf="@+id/btSearch"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btSearch"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_button"
            android:drawableRight="@drawable/ic_search_black_24dp"
            android:drawablePadding="3dp"
            android:padding="5dp"
            android:text="@string/top_searchText"
            android:textColor="#a9aaaa"
            app:layout_constraintBottom_toBottomOf="@+id/vToolbar"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- ListView -->
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvShop"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gl_15" />

    </android.support.constraint.ConstraintLayout>
</layout>